# dataviz

./: index.html  notes.md  pyproject.toml
.github/workflows/: static.yml
assets/: browser-BRxr9u90.js  browser-Dzh8drnO.js  browser-Ki729Rdj.js  index-Br_pZDsD.js  index-Bv76JKOg.css  index-Df60dDP3.js
data/: cosmo_data.csv  cosmo_metadata.csv  data.json
dataviz/: package-lock.json  package.json  test.html
dataviz/cosmograph/: index.html  tsconfig.app.tsbuildinfo
dataviz/cosmograph/data/: cosmo_data.csv  links.json
dataviz/cosmograph/src/: Cosmograph.css  Cosmograph.tsx  Legend.tsx
notebooks/: .gitignore  job_positions.ipynb
