[tool.poetry]
name = "jobads-viz"
version = "0.1.0"
description = ""
authors = ["Saranya Balasubramanian"]
readme = "README.md"
packages = [{include = "jobads_viz"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
plotly = "^5.24.1"
bokeh = "^3.6.0"
altair = "^5.4.1"
dash = "^2.18.1"
voila = "^0.5.8"
holoviews = "^1.19.1"
panel = "^1.5.2"
pyvis = "^0.3.2"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
